Uploaded image for project: 'Qt'
  1. Qt
  2. QTBUG-33627

Regression: GNU Emacs Style Key Sequences doesnt work on MAC

    XMLWordPrintable

Details

    • macOS
    • 183a3ca2ec5b81771cddec104baf37540661ac96

    Description

      GNU Emacs Style Key Sequences, as per the documentation doesn’t work on Qt5.1.1

      http://doc-snapshot.qt-project.org/qt5-nosubdir/qkeysequence.html#gnu-emacs-style-key-sequences

      Run the attached code on Qt5 vs Qt4.8, It works on Qt4.8 but not on MAC Qt5.1.1 .
      It also works on Linux Qt5.1.1

      Attachments

        Issue Links

          No reviews matched the request. Check your Options in the drop-down menu of this sections header.

          Activity

            People

              liaqi Liang Qi
              tapadar Indrajit Tapadar (Inactive)
              Votes:
              1 Vote for this issue
              Watchers:
              7 Start watching this issue

              Dates

                Created:
                Updated:
                Resolved:

                Gerrit Reviews

                  There are no open Gerrit changes