Cocoa: fix gnu emacs style shortcut for action in menu

The regression was introduced in bdebec4e2ef79f1771d2dcc22f9a919eb4487567.

Cocoa QPA plugin only could handle the shortcut with one key sequence, not the
multiple key sequences. We just let Qt to handle those cases.

Task-number: QTBUG-33627

Change-Id: I3898308d9f4ecda8bd716d8b286f05f9f311774a
Reviewed-by: Gabriel de Dietrich <gabriel.dedietrich@digia.com>